unpackaged/main/default/objects/ServiceResource/fields/Payroll_Processed_Requisitions_Labour__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Processed_Requisitions_Labour__c</fullName>
    <label>Processed Requisitions Labour Total</label>
    <summarizedField>Engineer_Pay_Requisition__c.Pay_Labour_and_Fixed_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Engineer_Pay_Requisition__c.Status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </summaryFilterItems>
    <summaryForeignKey>Engineer_Pay_Requisition__c.Service_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>