unpackaged/main/default/objects/ServiceResource/fields/Payroll_Processed_Total__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Processed_Total__c</fullName>
    <formula>Payroll_Processed_Requisitions__c  -  Payroll_Processed_Deductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processed Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>