unpackaged/main/default/objects/ServiceResource/fields/Payroll_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Reference__c</fullName>
    <label>Payroll Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>