unpackaged/main/default/objects/ServiceResource/fields/Payroll_Total_Pay__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Total_Pay__c</fullName>
    <formula>Payroll_Paid_Requisitions__c -  Payroll_Paid_Deductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>