unpackaged/main/default/objects/ServiceResource/fields/PDA_Make_and_Model__c.field-meta.xml
<CustomField>
    <fullName>PDA_Make_and_Model__c</fullName>
    <label>PDA Make and Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PDA_Make_and_Model</valueSetName>
    </valueSet>
</CustomField>