unpackaged/main/default/objects/ServiceResource/fields/PDA_Status__c.field-meta.xml
<CustomField>
    <fullName>PDA_Status__c</fullName>
    <label>PDA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Working</fullName>
            </value>
            <value>
                <fullName>Not Returned</fullName>
            </value>
            <value>
                <fullName>No PDA</fullName>
            </value>
            <value>
                <fullName>For Approval</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>