unpackaged/main/default/objects/ServiceResource/fields/Performance_Group__c.field-meta.xml
<CustomField>
    <fullName>Performance_Group__c</fullName>
    <description>Picklist created as per Alex</description>
    <label>Performance Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Leak Detection</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>