unpackaged/main/default/objects/ServiceResource/fields/Personal_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Personal_Contact_Number__c</fullName>
    <label>Personal Contact Number</label>
    <type>Phone</type>
</CustomField>