unpackaged/main/default/objects/ServiceResource/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Resource Phone No</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>