unpackaged/main/default/objects/ServiceResource/fields/Policy_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Policy_Agreement__c</fullName>
    <label>Policy Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Isolating</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
            <value>
                <fullName>IT Issue</fullName>
            </value>
            <value>
                <fullName>With Challow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>