unpackaged/main/default/objects/ServiceResource/fields/Postcode_for_schedule_STM__c.field-meta.xml
<CustomField>
    <fullName>Postcode_for_schedule_STM__c</fullName>
    <description>Post code of the Service Resources assigned Service Territory Member record.</description>
    <inlineHelpText>Post code of the Service Resources assigned Service Territory Member record.</inlineHelpText>
    <label>Postcode for schedule (STM)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>