unpackaged/main/default/objects/ServiceResource/fields/Powerflush__c.field-meta.xml
<CustomField>
    <fullName>Powerflush__c</fullName>
    <label>Powerflush</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>