unpackaged/main/default/objects/ServiceResource/fields/PPE_Kit_Allocated__c.field-meta.xml
<CustomField>
    <fullName>PPE_Kit_Allocated__c</fullName>
    <label>PPE Kit Allocated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>