unpackaged/main/default/objects/ServiceResource/fields/PPE_Phone_Call__c.field-meta.xml
<CustomField>
    <fullName>PPE_Phone_Call__c</fullName>
    <label>PPE Phone Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alex</fullName>
            </value>
            <value>
                <fullName>Carl</fullName>
            </value>
            <value>
                <fullName>Chris</fullName>
            </value>
            <value>
                <fullName>Damian</fullName>
            </value>
            <value>
                <fullName>Hollie</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Richard</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>