unpackaged/main/default/objects/ServiceResource/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <description>Preferred Name of Service Resource</description>
    <inlineHelpText>Preferred Name of Service Resource, e.g. &#39;Phil&#39;</inlineHelpText>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>