unpackaged/main/default/objects/ServiceResource/fields/Preview_Report_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Preview_Report_Sent_Date__c</fullName>
    <label>Preview Report Sent Date</label>
    <type>DateTime</type>
</CustomField>