unpackaged/main/default/objects/ServiceResource/fields/Qualifying_WTs_Count__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_WTs_Count__c</fullName>
    <label>Qualifying WTs Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>