unpackaged/main/default/objects/ServiceResource/fields/Rate_of_Pay_Tier__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Pay_Tier__c</fullName>
    <description>Rate at which the Engineer receives Pay</description>
    <inlineHelpText>Rate at which the Engineer receives Pay</inlineHelpText>
    <label>Rate of Pay Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Engineer_Tier_Type</valueSetName>
    </valueSet>
</CustomField>