unpackaged/main/default/objects/ServiceResource/fields/Reason_of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Departure__c</fullName>
    <label>Reason of Departure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntarily</fullName>
            </value>
            <value>
                <fullName>Involuntarily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>