unpackaged/main/default/objects/ServiceResource/fields/Residential_City__c.field-meta.xml
<CustomField>
    <fullName>Residential_City__c</fullName>
    <description>Residential City of the resource</description>
    <label>Residential City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>