unpackaged/main/default/objects/ServiceResource/fields/Residential_Country__c.field-meta.xml
<CustomField>
    <fullName>Residential_Country__c</fullName>
    <description>Residential Country of the resource</description>
    <label>Residential Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>