unpackaged/main/default/objects/ServiceResource/fields/Residential_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Residential_PostalCode__c</fullName>
    <description>Residential Postal Code of the resource</description>
    <label>Residential PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>