unpackaged/main/default/objects/ServiceResource/fields/Residential_State__c.field-meta.xml
<CustomField>
    <fullName>Residential_State__c</fullName>
    <description>Residential State of the resource</description>
    <label>Residential State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>