unpackaged/main/default/objects/ServiceResource/fields/Residential_Street__c.field-meta.xml
<CustomField>
    <fullName>Residential_Street__c</fullName>
    <description>Residential Street of the resource</description>
    <label>Residential Street</label>
    <type>TextArea</type>
</CustomField>