unpackaged/main/default/objects/ServiceResource/fields/Resource_Title__c.field-meta.xml
<CustomField>
    <fullName>Resource_Title__c</fullName>
    <description>Resource Title</description>
    <label>Resource Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Resource_Titles</valueSetName>
    </valueSet>
</CustomField>