unpackaged/main/default/objects/ServiceResource/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <description>Retention kept as a percentage</description>
    <label>Retention</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>