unpackaged/main/default/objects/ServiceResource/fields/Retention_Held__c.field-meta.xml
<CustomField>
    <fullName>Retention_Held__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retention Held</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>