unpackaged/main/default/objects/ServiceResource/fields/Retention_Maximum_limit__c.field-meta.xml
<CustomField>
    <fullName>Retention_Maximum_limit__c</fullName>
    <formula>$CustomMetadata.Aspect_Setting__mdt.Aspect_Maintenance_Services_Ltd.Retention_Maximum_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retention Maximum limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>