unpackaged/main/default/objects/ServiceResource/fields/Shift_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Shift_Pattern__c</fullName>
    <label>Shift Pattern</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shift_Pattern</valueSetName>
    </valueSet>
</CustomField>