unpackaged/main/default/objects/ServiceResource/fields/Shift_Pattern_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shift_Pattern_Notes__c</fullName>
    <label>Shift Pattern Notes</label>
    <type>TextArea</type>
</CustomField>