unpackaged/main/default/objects/ServiceResource/fields/Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Skill_Set__c</fullName>
    <label>Skill Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>LEFT</fullName>
            </value>
            <value>
                <fullName>N4</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>TW9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>