unpackaged/main/default/objects/ServiceResource/fields/Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code__c</fullName>
    <description>This is the Franchisee&#39;s Sort Code</description>
    <inlineHelpText>This is the Franchisee&#39;s Sort Code</inlineHelpText>
    <label>Sort Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>