unpackaged/main/default/objects/ServiceResource/fields/ST_Membership__c.field-meta.xml
<CustomField>
    <fullName>ST_Membership__c</fullName>
    <label>ST Membership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ST Only</fullName>
            </value>
            <value>
                <fullName>2021 Dates Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>