unpackaged/main/default/objects/ServiceResource/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date the resource has started work</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>