unpackaged/main/default/objects/ServiceResource/fields/Top_Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Top_Technical_Skills__c</fullName>
    <label>Top Technical Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The ability to problem solve and correctly diagnosed issues regarding uPVC locks and glass</fullName>
            </value>
            <value>
                <fullName>Carpentry plumbing decorating kitchens bathrooms refurbishments</fullName>
            </value>
            <value>
                <fullName>Nice clean job finished to high standard</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Felting</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Carpentry</fullName>
            </value>
            <value>
                <fullName>Customer service</fullName>
            </value>
            <value>
                <fullName>Heating</fullName>
            </value>
            <value>
                <fullName>Painting and fencing</fullName>
            </value>
            <value>
                <fullName>Boiler installs</fullName>
            </value>
            <value>
                <fullName>System wiring</fullName>
            </value>
            <value>
                <fullName>Heating problems etc.</fullName>
            </value>
            <value>
                <fullName>Thorough</fullName>
            </value>
            <value>
                <fullName>Tile, bathroom fitting</fullName>
            </value>
            <value>
                <fullName>Install, problem solving</fullName>
            </value>
            <value>
                <fullName>Plastering, plasterboard, fencing.</fullName>
            </value>
            <value>
                <fullName>All of plumbing and heating</fullName>
            </value>
            <value>
                <fullName>Plumbing and heating</fullName>
            </value>
            <value>
                <fullName>Tiling</fullName>
            </value>
            <value>
                <fullName>Testing, fault finding, maintaining system, PiR</fullName>
            </value>
            <value>
                <fullName>Fault finding</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Decoration</fullName>
            </value>
            <value>
                <fullName>Painter</fullName>
            </value>
            <value>
                <fullName>Pitched roofing. Plain tiles</fullName>
            </value>
            <value>
                <fullName>All of them</fullName>
            </value>
            <value>
                <fullName>Boilers and plumbing</fullName>
            </value>
            <value>
                <fullName>Windows doors replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>