unpackaged/main/default/objects/ServiceResource/fields/Total_after_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Total_after_Deduction__c</fullName>
    <formula>(Payroll_New_Requisitions__c  +  Payroll_Approved_Requisitions__c + Payroll_Processed_Requisitions__c )-( Payroll_New_Deductions__c  +  Payroll_Approved_Deductions__c  +  Payroll_Processed_Deductions__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total after Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>