unpackaged/main/default/objects/ServiceResource/fields/Total_Pay_REQ__c.field-meta.xml
<CustomField>
    <fullName>Total_Pay_REQ__c</fullName>
    <formula>(Payroll_New_Requisitions__c + Payroll_Approved_Requisitions__c + Payroll_Processed_Requisitions_Labour__c + Payroll_Paid_Requisitions__c) - ( Payroll_New_Deductions__c +  Payroll_Approved_Deductions__c + Payroll_Processed_Deductions_Other__c +  Payroll_Paid_Deductions__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New / Approved / Paid / Processed Requisition Total</inlineHelpText>
    <label>Total Pay  REQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>