unpackaged/main/default/objects/ServiceResource/fields/Total_Retention_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Total_Retention_Deductions__c</fullName>
    <description>This is from Rollup helper and is needed to display the total value of all the Retention Deductions against the Service Resource. DO NOT DELETE</description>
    <inlineHelpText>This is from Rollup helper and is needed to display the total value of all the Retention Deductions against the Service Resource. DO NOT DELETE</inlineHelpText>
    <label>Total Retention Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>