unpackaged/main/default/objects/ServiceResource/fields/Trade_Group__c.field-meta.xml
<CustomField>
    <fullName>Trade_Group__c</fullName>
    <label>Service Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carpenters</fullName>
            </value>
            <value>
                <fullName>Commercial Gas</fullName>
            </value>
            <value>
                <fullName>Decorators</fullName>
            </value>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Drainage Survey</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Electrical Testing</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>LD - Drainage</fullName>
            </value>
            <value>
                <fullName>LD - Heat/Hot water</fullName>
            </value>
            <value>
                <fullName>LD - Multi</fullName>
            </value>
            <value>
                <fullName>LD - Plumbing</fullName>
            </value>
            <value>
                <fullName>LD - Roofing</fullName>
            </value>
            <value>
                <fullName>Leak detection</fullName>
            </value>
            <value>
                <fullName>Multi Carpenters</fullName>
            </value>
            <value>
                <fullName>Multi Decorators</fullName>
            </value>
            <value>
                <fullName>Multi skilled</fullName>
            </value>
            <value>
                <fullName>Multi-Plumber</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Test Ops</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Waste Clearance</fullName>
            </value>
            <value>
                <fullName>LD - Bathrooms</fullName>
                <isActive>false</isActive>
                <label>LD - Bathrooms</label>
            </value>
            <value>
                <fullName>LD - Building Fabric</fullName>
                <isActive>false</isActive>
                <label>LD - Building Fabric</label>
            </value>
            <value>
                <fullName>LD - Gas</fullName>
                <isActive>false</isActive>
                <label>LD - Gas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>