unpackaged/main/default/objects/ServiceResource/fields/Trade_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Trade_Lookup__c</fullName>
    <label>Trade Group (lookup)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Electrical &amp; HVAC</fullName>
            </value>
            <value>
                <fullName>Electrical Testing</fullName>
            </value>
            <value>
                <fullName>Leak Detection</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Test Ops</fullName>
            </value>
            <value>
                <fullName>Plumbing &amp; Gas</fullName>
                <isActive>false</isActive>
                <label>Plumbing &amp; Gas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>