unpackaged/main/default/objects/ServiceResource/fields/Uniform_Provided_List__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Provided_List__c</fullName>
    <label>Uniform Provided List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polo Shirt</fullName>
            </value>
            <value>
                <fullName>Shorts</fullName>
            </value>
            <value>
                <fullName>Heavy Duty Trousers</fullName>
            </value>
            <value>
                <fullName>Heavy Duty Jacket</fullName>
            </value>
            <value>
                <fullName>Sweatshirt with Zip</fullName>
            </value>
            <value>
                <fullName>Beanie Hat</fullName>
            </value>
            <value>
                <fullName>Baseball Cap</fullName>
            </value>
            <value>
                <fullName>Hi-Vis Vest</fullName>
            </value>
            <value>
                <fullName>Hi-Vis jacket</fullName>
            </value>
            <value>
                <fullName>Drainage Waders (Drainage Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>