unpackaged/main/default/objects/ServiceResource/fields/Uniform_Status__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Status__c</fullName>
    <label>Uniform Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Not Returned</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Update Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>