unpackaged/main/default/objects/ServiceResource/fields/Van_Number__c.field-meta.xml
<CustomField>
    <fullName>Van_Number__c</fullName>
    <label>Van Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>